Fixed styling and added dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 @tailwind utilities;
 
 body {
-  @apply flex h-screen w-screen flex-col items-center justify-center bg-[#efefef] font-inter;
+  @apply flex h-screen w-screen flex-col items-center justify-center bg-[#efefef] font-inter dark:bg-gray-800;
 }
